2002-03-19  jacob berkman  <jacob@ximian.com>

	* gtk/gtkcombo.c (gtk_combo_find): fix infinite loop when
	gtk_combo_func() returns NULL (bug #75464)

2002-03-18  jacob berkman  <jacob@ximian.com>

	* gtk/gtkaspectframe.c (gtk_aspect_frame_class_init): set the
	correct min/max values for the ratio property (fixes #75331)

Mon Mar 18 11:55:03 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkimmulticontext.c (gtk_im_multicontext_get_slave):
	Patch from Yao Zhang fixing reference count leak.

	* gtk/gtkentry.c (gtk_entry_key_release): if (entry->editable),
	not if (!entry->editable).

Mon Mar 18 11:09:17 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkwindow-x11.c (gdk_window_set_override_redirect): 
	Fix backwards conditional. (#75019, Dan Winship.)

Sun Mar 17 01:11:16 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_size_request): use
	do_validate_rows instead of validate_rows_handler (fix by
	Mike Pieper, #74126)

Sat Mar 16 23:54:56 2002  Kristian Rietveld  <kris@gtk.org>

	* gdk/x11/gdkwindow-x11.c (gdk_window_set_static_bit_gravity): just
	return when we have an input_only window (fix by Owen Taylor)

	* gtk/gtktreeprivate.h (struct _GtkTreeViewPrivate): add
	scroll_sync_timer

	* gtk/gtktreeview.c (install_scroll_sync_handler): new function,
	(scroll_sync_handler): ditto,
	(gtk_tree_view_unrealize): take scroll_sync_timer into account
	(gtk_tree_view_row_deleted): install scroll_sync_timer instead of
	calling top_row_to_dy/dy_to_top_row directly
	-- this greatly speeds up clearing the model (#73199)

	* gtk/gtktreemodelsort.c
	(gtk_tree_model_sort_convert_path_to_child_path): fix up this function,
	for some reason I really screwed it up (fixes #74663)

2002-03-16  Sven Neumann  <sven@gimp.org>

	* configure.in (GDK_PIXBUF_DEP_CFLAGS) (GDK_PIXBUF_XLIB_DEP_CFLAGS) 
	(GDK_DEP_CFLAGS) (GTK_DEP_CFLAGS): include CFLAGS from gthread-2.0
	so that the libs work correctly in a threaded environment.
